--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <div class="container">
-            
+            <header>
+                    <ul>
+                        <li class="logo">Kilalidus</li>
+                        <li class="list">Home</li>
+                        <li class="list">Category</li>
+                        <li class="list">About</li>
+                        <li class="list">Contact</li>
+                        <li class="list"><input type="search" class="search"/><img src="images/magnifiying-glass.png" class="com"/></li>
+                    </ul>
+
+            </header>
         </div>
     </body>
 
