--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <body>
         <div class="container">
             <header>
-                    <ul>
-                        <li class="logo">Kilalidus</li>
-                        <li class="list">Home</li>
-                        <li class="list">Category</li>
-                        <li class="list">About</li>
-                        <li class="list">Contact</li>
-                        <li class="list"><input type="search" class="search"/><img src="images/magnifiying-glass.png" class="com"/></li>
+                <a href="#" class="logo">Kilalidus</a>
+                <ul class="list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Category</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><input type="search" class="search"/><img src="images/magnifiying-glass.png" class="com"/></li>
                     </ul>
 
             </header>
+            <div>
+                <nav>
+                    <img src="images/2019_03_02_66706_1551461528._large.jpg"/>
+                    <img src="images/best-saas-books.jpg"/>
+                </nav>
+            </div>
         </div>
     </body>
 
