--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
             </header>
             <div>
-                <nav>
-                    <img src="images/2019_03_02_66706_1551461528._large.jpg"/>
-                    <img src="images/best-saas-books.jpg"/>
+                <nav class="slide">
+                    <ul>
+                    <li><img src="images/Save Your Time.png"/></li>
+                    <li><img src="images/best-saas-books.jpg"/></li>
+                    </ul>
                 </nav>
             </div>
         </div>
