--- a/index.html
+++ b/index.html
@@ -17,15 +17,54 @@
                     </ul>
 
             </header>
-            <div>
-                <nav class="slide">
-                    <ul>
-                    <li><img src="images/Save Your Time.png"/></li>
-                    <li><img src="images/best-saas-books.jpg"/></li>
-                    </ul>
-                </nav>
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
+
+                    <div class="slide first">
+                        <img src="images/2019_03_02_66706_1551461528._large.jpg" alt=""/>
+                    </div>
+                    <div class="slide">
+                        <img src="images/best-saas-books.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="images/Save Your Time.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="images/pexels-andrea-piacquadio-3769982.jpg" alt="">
+                    </div>
+
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+
+                </div>
+
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
             </div>
         </div>
+        <script type="text/javascript">
+            var counter = 1;
+            setInterval(function(){
+                document.getElementById('radio' + counter).checked = true;
+                counter++;
+                if(counter > 4){
+                    counter = 1;
+                }
+            }, 5000);
+        </script>
+
     </body>
 
 </html>
